--- a/config.h.in
+++ b/config.h.in
@@ -59,6 +59,15 @@
 /* Define if your <sys/time.h> declares struct tm.  */
 #undef TM_IN_SYS_TIME
 
+/* Define to the name of the distribution.  */
+#undef PACKAGE
+
+/* The concatenation of the strings "GNU ", and PACKAGE.  */
+#undef GNU_PACKAGE
+
+/* Define to the version of the distribution.  */
+#undef VERSION
+
 /* Define if you have the ftime function.  */
 #undef HAVE_FTIME
 
