--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(init.c)
+AC_INIT(src/init.c)
 
-PACKAGE=oleo
-VERSION=1.6.5
+AM_INIT_AUTOMAKE([oleo], [1.65])
+
 AC_ARG_PROGRAM
 AM_CONFIG_HEADER(config.h)
 
@@ -39,4 +39,4 @@ AC_FUNC_STRFTIME
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(ftime gethostname gettimeofday mktime select strdup strstr)
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT([Makefile doc/Makefile src/Makefile])
