--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,6 +57,7 @@ VERSION = @VERSION@
 YACC = @YACC@
 
 bin_PROGRAMS = oleo
+
 oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
  decompile.c sort.c regions.c utils.c obstack.c lists.c\
  io-term.c getopt.c getopt1.c io-utils.c io-x11.c window.c io-edit.c\
@@ -66,6 +67,14 @@ oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
  random.c cmd.c basic.c args.c \
  stub.c input.c info.c help.c graph.c forminfo.c getdate.y \
  mktime.c posixtm.y date.c xmalloc.c
+
+noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
+ defun.h defuns.h display.h errors.h eval.h font.h format.h forminfo.h \
+ funcdef.h funcs.h getopt.h global.h graph.h hash.h help.h info.h init.h \
+ input.h io-abstract.h io-curses.h io-edit.h io-generic.h io-term.h \
+ io-utils.h io-x11.h ir.h key.h line.h lists.h node.h obstack.h oleofile.h \
+ panic.h parse.h print.h proto.h ref.h regions.h sc.h stub.h stubs.h sylk.h \
+ sysdef.h utils.h window.h
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
@@ -89,6 +98,8 @@ YLWRAP = $(srcdir)/ylwrap
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
 LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
+HEADERS =  $(noinst_HEADERS)
+
 DIST_COMMON =  Makefile.am Makefile.in getdate.c parse.c posixtm.c \
 ylwrap
 
@@ -247,7 +258,7 @@ install: install-exec install-data all
 
 uninstall: uninstall-binPROGRAMS
 
-all: Makefile $(PROGRAMS)
+all: Makefile $(PROGRAMS) $(HEADERS)
 
 install-strip:
 	$(MAKE) INSTALL_PROGRAM='$(INSTALL_PROGRAM) -s' INSTALL_SCRIPT='$(INSTALL_PROGRAM)' install
