--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -53,20 +53,23 @@ CC = @CC@
 LN_S = @LN_S@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
+U = @U@
 VERSION = @VERSION@
 YACC = @YACC@
 
 bin_PROGRAMS = oleo
 
 oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
- decompile.c sort.c regions.c utils.c obstack.c lists.c\
+ decompile.c sort.c regions.c utils.c lists.c\
  io-term.c getopt.c getopt1.c io-utils.c io-x11.c window.c io-edit.c\
  hash.c panic.c line.c key.c format.c funcs.c \
  io-curses.c font.c display.c print.c init.c \
  sylk.c oleofile.c sc.c list.c busi.c string.c cells.c \
  random.c cmd.c basic.c args.c \
  stub.c input.c info.c help.c graph.c forminfo.c getdate.y \
- mktime.c posixtm.y date.c xmalloc.c
+ posixtm.y date.c xmalloc.c
+
+EXTRA_oleo_SOURCES = mktime.c obstack.c
 
 noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  defun.h defuns.h display.h errors.h eval.h font.h format.h forminfo.h \
@@ -75,6 +78,10 @@ noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  io-utils.h io-x11.h ir.h key.h line.h lists.h node.h obstack.h oleofile.h \
  panic.h parse.h print.h proto.h ref.h regions.h sc.h stub.h stubs.h sylk.h \
  sysdef.h utils.h window.h list.h
+
+oleo_LDADD = $(X_PRE_LIBS) $(X_LIBS) -lX11
+
+INCLUDES = $(X_CFLAGS)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
@@ -85,14 +92,18 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I..
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
+X_CFLAGS = @X_CFLAGS@
+X_LIBS = @X_LIBS@
+X_EXTRA_LIBS = @X_EXTRA_LIBS@
+X_PRE_LIBS = @X_PRE_LIBS@
 oleo_OBJECTS =  parse.o byte-compile.o eval.o ref.o decompile.o sort.o \
-regions.o utils.o obstack.o lists.o io-term.o getopt.o getopt1.o \
-io-utils.o io-x11.o window.o io-edit.o hash.o panic.o line.o key.o \
-format.o funcs.o io-curses.o font.o display.o print.o init.o sylk.o \
-oleofile.o sc.o list.o busi.o string.o cells.o random.o cmd.o basic.o \
-args.o stub.o input.o info.o help.o graph.o forminfo.o getdate.o \
-mktime.o posixtm.o date.o xmalloc.o
-oleo_LDADD = $(LDADD)
+regions.o utils.o lists.o io-term.o getopt.o getopt1.o io-utils.o \
+io-x11.o window.o io-edit.o hash.o panic.o line.o key.o format.o \
+funcs.o io-curses.o font.o display.o print.o init.o sylk.o oleofile.o \
+sc.o list.o busi.o string.o cells.o random.o cmd.o basic.o args.o \
+stub.o input.o info.o help.o graph.o forminfo.o getdate.o posixtm.o \
+date.o xmalloc.o
+oleo_DEPENDENCIES = 
 oleo_LDFLAGS = 
 YLWRAP = $(srcdir)/ylwrap
 CFLAGS = @CFLAGS@
@@ -120,7 +131,7 @@ DEP_FILES =  .deps/args.P .deps/basic.P .deps/busi.P \
 .deps/posixtm.P .deps/print.P .deps/random.P .deps/ref.P \
 .deps/regions.P .deps/sc.P .deps/sort.P .deps/string.P .deps/stub.P \
 .deps/sylk.P .deps/utils.P .deps/window.P .deps/xmalloc.P
-SOURCES = $(oleo_SOURCES)
+SOURCES = $(oleo_SOURCES) $(EXTRA_oleo_SOURCES)
 OBJECTS = $(oleo_OBJECTS)
 
 default: all
