--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,14 +1,16 @@
 bin_PROGRAMS = oleo
 
 oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
- decompile.c sort.c regions.c utils.c obstack.c lists.c\
+ decompile.c sort.c regions.c utils.c lists.c\
  io-term.c getopt.c getopt1.c io-utils.c io-x11.c window.c io-edit.c\
  hash.c panic.c line.c key.c format.c funcs.c \
  io-curses.c font.c display.c print.c init.c \
  sylk.c oleofile.c sc.c list.c busi.c string.c cells.c \
  random.c cmd.c basic.c args.c \
  stub.c input.c info.c help.c graph.c forminfo.c getdate.y \
- mktime.c posixtm.y date.c xmalloc.c
+ posixtm.y date.c xmalloc.c
+
+EXTRA_oleo_SOURCES = mktime.c obstack.c
 
 noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  defun.h defuns.h display.h errors.h eval.h font.h format.h forminfo.h \
@@ -17,4 +19,8 @@ noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  io-utils.h io-x11.h ir.h key.h line.h lists.h node.h obstack.h oleofile.h \
  panic.h parse.h print.h proto.h ref.h regions.h sc.h stub.h stubs.h sylk.h \
  sysdef.h utils.h window.h list.h
+
+oleo_LDADD = $(X_PRE_LIBS) $(X_LIBS) -lX11
+
+INCLUDES = $(X_CFLAGS)
 
