--- a/Makefile.in
+++ b/Makefile.in
@@ -296,6 +296,9 @@ clean-generic maintainer-clean-generic clean mostlyclean distclean \
 maintainer-clean
 
 
+release:
+	$(MAKE) dist distdir=$(PACKAGE)`date +"%y%m%d"`
+
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
