--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -63,11 +63,11 @@ oleo_SOURCES = parse.y byte-compile.c eval.c ref.c \
  decompile.c sort.c regions.c utils.c lists.c\
  io-term.c getopt.c getopt1.c io-utils.c io-x11.c window.c io-edit.c\
  hash.c panic.c line.c key.c format.c funcs.c \
- io-curses.c font.c display.c print.c init.c \
+ ir.c io-curses.c font.c display.c print.c init.c \
  sylk.c oleofile.c sc.c list.c busi.c string.c cells.c \
  random.c cmd.c basic.c args.c \
  stub.c input.c info.c help.c graph.c forminfo.c getdate.y \
- posixtm.y date.c xmalloc.c
+ posixtm.y date.c xmalloc.c xrdb.c
 
 EXTRA_oleo_SOURCES = mktime.c obstack.c
 
@@ -77,7 +77,7 @@ noinst_HEADERS = args.h basic.h byte-compile.h cell.h cmd.h decompile.h \
  input.h io-abstract.h io-curses.h io-edit.h io-generic.h io-term.h \
  io-utils.h io-x11.h ir.h key.h line.h lists.h node.h obstack.h oleofile.h \
  panic.h parse.h print.h proto.h ref.h regions.h sc.h stub.h stubs.h sylk.h \
- sysdef.h utils.h window.h list.h
+ sysdef.h utils.h window.h list.h ir.h 
 
 oleo_LDADD = $(X_PRE_LIBS) $(X_LIBS) -lX11
 
@@ -99,10 +99,10 @@ X_PRE_LIBS = @X_PRE_LIBS@
 oleo_OBJECTS =  parse.o byte-compile.o eval.o ref.o decompile.o sort.o \
 regions.o utils.o lists.o io-term.o getopt.o getopt1.o io-utils.o \
 io-x11.o window.o io-edit.o hash.o panic.o line.o key.o format.o \
-funcs.o io-curses.o font.o display.o print.o init.o sylk.o oleofile.o \
-sc.o list.o busi.o string.o cells.o random.o cmd.o basic.o args.o \
-stub.o input.o info.o help.o graph.o forminfo.o getdate.o posixtm.o \
-date.o xmalloc.o
+funcs.o ir.o io-curses.o font.o display.o print.o init.o sylk.o \
+oleofile.o sc.o list.o busi.o string.o cells.o random.o cmd.o basic.o \
+args.o stub.o input.o info.o help.o graph.o forminfo.o getdate.o \
+posixtm.o date.o xmalloc.o xrdb.o
 oleo_DEPENDENCIES = 
 oleo_LDFLAGS = 
 YLWRAP = $(srcdir)/ylwrap
@@ -126,11 +126,11 @@ DEP_FILES =  .deps/args.P .deps/basic.P .deps/busi.P \
 .deps/getopt.P .deps/getopt1.P .deps/graph.P .deps/hash.P .deps/help.P \
 .deps/info.P .deps/init.P .deps/input.P .deps/io-curses.P \
 .deps/io-edit.P .deps/io-term.P .deps/io-utils.P .deps/io-x11.P \
-.deps/key.P .deps/line.P .deps/list.P .deps/lists.P .deps/mktime.P \
-.deps/obstack.P .deps/oleofile.P .deps/panic.P .deps/parse.P \
-.deps/posixtm.P .deps/print.P .deps/random.P .deps/ref.P \
+.deps/ir.P .deps/key.P .deps/line.P .deps/list.P .deps/lists.P \
+.deps/mktime.P .deps/obstack.P .deps/oleofile.P .deps/panic.P \
+.deps/parse.P .deps/posixtm.P .deps/print.P .deps/random.P .deps/ref.P \
 .deps/regions.P .deps/sc.P .deps/sort.P .deps/string.P .deps/stub.P \
-.deps/sylk.P .deps/utils.P .deps/window.P .deps/xmalloc.P
+.deps/sylk.P .deps/utils.P .deps/window.P .deps/xmalloc.P .deps/xrdb.P
 SOURCES = $(oleo_SOURCES) $(EXTRA_oleo_SOURCES)
 OBJECTS = $(oleo_OBJECTS)
 
